# cargo-unify

./: Cargo.toml  README.md
_test/: Cargo.toml  README.md
_test/src/: a.rs  lib.rs
_test/src/a/: c.rs
_test/src/b/: d.rs  mod.rs
src/: lib.rs  main.rs  tests.rs
