[package]
name = "cargo-unify"
version = "0.1.5"
edition = "2024"
authors = ["Rotem Horesh (rotmh)"]
license = "MIT"
description = "A tool to unify crates into single buildable files."
readme = "README.md"
repository = "https://github.com/rotmh/cargo-unify"
keywords = ["unify", "subcommand", "bundle", "cargo"]
exclude = [".ignore"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[profile.release]
codegen-units = 1
lto = "fat"
